# sov-snap-generator

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  build.rs  definitions.rs  init.rs  interface.rs  main.rs  manifest.rs
